tests/NormalTests/paczka1/small_fuzzy/18696596.err
Error in line 7: QXqdp S646 24,4
Error in line 11: dubcPsuOA A100 4,5
